--- a/_modules/pygef/cpt.html
+++ b/_modules/pygef/cpt.html
@@ -76,14 +76,14 @@
 
 <span class="kn">import</span> <span class="nn">copy</span>
 <span class="kn">import</span> <span class="nn">pprint</span>
-<span class="kn">from</span> <span class="nn">dataclasses</span> <span class="kn">import</span> <span class="n">dataclass</span>
+<span class="kn">from</span> <span class="nn">dataclasses</span> <span class="kn">import</span> <span class="n">dataclass</span><span class="p">,</span> <span class="n">field</span>
 <span class="kn">from</span> <span class="nn">datetime</span> <span class="kn">import</span> <span class="n">date</span>
 <span class="kn">from</span> <span class="nn">enum</span> <span class="kn">import</span> <span class="n">Enum</span>
-<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span>
+<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">List</span>
 
 <span class="kn">import</span> <span class="nn">polars</span> <span class="k">as</span> <span class="nn">pl</span>
 
-<span class="kn">from</span> <span class="nn">pygef.common</span> <span class="kn">import</span> <span class="n">Location</span>
+<span class="kn">from</span> <span class="nn">pygef.common</span> <span class="kn">import</span> <span class="n">Location</span><span class="p">,</span> <span class="n">VerticalDatumClass</span><span class="p">,</span> <span class="n">depth_to_offset</span>
 
 
 <span class="k">class</span> <span class="nc">QualityClass</span><span class="p">(</span><span class="n">Enum</span><span class="p">):</span>
@@ -94,13 +94,14 @@
     <span class="n">Class4</span> <span class="o">=</span> <span class="mi">4</span>
 
 
-<div class="viewcode-block" id="CPTData"><a class="viewcode-back" href="../../tree/reference.html#pygef.cpt.CPTData">[docs]</a><span class="nd">@dataclass</span>
+<div class="viewcode-block" id="CPTData"><a class="viewcode-back" href="../../tree/reference.html#pygef.cpt.CPTData">[docs]</a><span class="nd">@dataclass</span><span class="p">(</span><span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 <span class="k">class</span> <span class="nc">CPTData</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    The CPT dataclass holds the information from the CPT object.</span>
 
 <span class="sd">    Attributes:</span>
 <span class="sd">        bro_id (str | None): BRO ID of the CPT.</span>
+<span class="sd">        alias  (str | None): Alias of the CPT.</span>
 <span class="sd">        research_report_date (date): research report date</span>
 <span class="sd">        delivered_location (Location): delivered location in `EPSG:28992 - RD new`</span>
 <span class="sd">        standardized_location (Location | None): standardized location in `EPSG:4326 - WGS 84`</span>
@@ -138,6 +139,45 @@
 <span class="sd">        zlm_pore_pressure_u2_after (float | None): zlm_pore_pressure_u2_after</span>
 <span class="sd">        zlm_pore_pressure_u3_after (float | None): zlm_pore_pressure_u3_after</span>
 <span class="sd">        data (pl.DataFrame): DataFrame</span>
+<span class="sd">            columns:</span>
+
+<span class="sd">                - penetrationLength [m]</span>
+<span class="sd">                - coneResistance [MPa]</span>
+
+<span class="sd">            optional columns:</span>
+
+<span class="sd">                - depthOffset [m wrt offset]</span>
+<span class="sd">                    see delivered_vertical_position_datum for offset</span>
+<span class="sd">                - depth [m]</span>
+<span class="sd">                    penetrationLength corrected for inclination</span>
+<span class="sd">                - correctedConeResistance [MPa]</span>
+<span class="sd">                - netConeResistance [MPa]</span>
+<span class="sd">                - coneResistanceRatio</span>
+<span class="sd">                - localFriction [MPa]</span>
+<span class="sd">                - frictionRatioComputed [%]</span>
+<span class="sd">                - frictionRatio [%]</span>
+<span class="sd">                - porePressureU1 [MPa]</span>
+<span class="sd">                - porePressureU2 [MPa]</span>
+<span class="sd">                - porePressureU3 [MPa]</span>
+<span class="sd">                - inclinationResultant [degrees]</span>
+<span class="sd">                - inclinationNS [degrees]</span>
+<span class="sd">                - inclinationEW [degrees]</span>
+<span class="sd">                - elapsedTime [seconds]</span>
+<span class="sd">                - poreRatio [MPa]</span>
+<span class="sd">                - soilDensity</span>
+<span class="sd">                - porePressure</span>
+<span class="sd">                - verticalPorePressureTotal</span>
+<span class="sd">                - verticalPorePressureEffective</span>
+<span class="sd">                - temperature [degrees celsius]</span>
+<span class="sd">                - inclinationX [degrees]</span>
+<span class="sd">                - inclinationY [degrees]</span>
+<span class="sd">                - electricalConductivity [S/m]</span>
+<span class="sd">                - magneticFieldStrengthX [nT]</span>
+<span class="sd">                - magneticFieldStrengthY [nT]</span>
+<span class="sd">                - magneticFieldStrengthZ [nT]</span>
+<span class="sd">                - magneticFieldStrengthTotal [nT]</span>
+<span class="sd">                - magneticInclination [degrees]</span>
+<span class="sd">                - magneticDeclination [degrees]</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="c1"># dispatch_document cpt</span>
@@ -179,14 +219,52 @@
     <span class="n">zlm_pore_pressure_u2_after</span><span class="p">:</span> <span class="nb">float</span> <span class="o">|</span> <span class="kc">None</span>
     <span class="n">zlm_pore_pressure_u3_after</span><span class="p">:</span> <span class="nb">float</span> <span class="o">|</span> <span class="kc">None</span>
     <span class="n">delivered_vertical_position_offset</span><span class="p">:</span> <span class="nb">float</span> <span class="o">|</span> <span class="kc">None</span>
-    <span class="n">delivered_vertical_position_datum</span><span class="p">:</span> <span class="nb">str</span>
+    <span class="n">delivered_vertical_position_datum</span><span class="p">:</span> <span class="n">VerticalDatumClass</span>
     <span class="n">delivered_vertical_position_reference_point</span><span class="p">:</span> <span class="nb">str</span>
-
     <span class="n">data</span><span class="p">:</span> <span class="n">pl</span><span class="o">.</span><span class="n">DataFrame</span>
+
+    <span class="n">alias</span><span class="p">:</span> <span class="nb">str</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default</span><span class="o">=</span><span class="kc">None</span><span class="p">)</span>
+
+    <span class="k">def</span> <span class="nf">__post_init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="c1"># post-processing of the data</span>
+        <span class="n">df</span> <span class="o">=</span> <span class="p">(</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">lazy</span><span class="p">()</span>
+            <span class="o">.</span><span class="n">pipe</span><span class="p">(</span>
+                <span class="n">_calculate_depth_with_respect_to_offset</span><span class="p">,</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">delivered_vertical_position_offset</span><span class="p">,</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">columns</span><span class="p">,</span>
+            <span class="p">)</span>
+            <span class="o">.</span><span class="n">pipe</span><span class="p">(</span><span class="n">_calculate_friction_number</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">columns</span><span class="p">)</span>
+            <span class="o">.</span><span class="n">collect</span><span class="p">()</span>
+        <span class="p">)</span>
+        <span class="c1"># bypass FrozenInstanceError</span>
+        <span class="nb">object</span><span class="o">.</span><span class="fm">__setattr__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="s2">&quot;data&quot;</span><span class="p">,</span> <span class="n">df</span><span class="p">)</span>
 
     <span class="nd">@property</span>
     <span class="k">def</span> <span class="nf">columns</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Columns names for the DataFrame&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">columns</span>
+
+    <span class="nd">@property</span>
+    <span class="k">def</span> <span class="nf">groundwater_level_offset</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">float</span> <span class="o">|</span> <span class="kc">None</span><span class="p">:</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;groundwater level wrt offset&quot;&quot;&quot;</span>
+        <span class="k">return</span> <span class="n">depth_to_offset</span><span class="p">(</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">groundwater_level</span><span class="p">,</span> <span class="n">offset</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">delivered_vertical_position_offset</span>
+        <span class="p">)</span>
+
+    <span class="nd">@property</span>
+    <span class="k">def</span> <span class="nf">predrilled_depth_offset</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">float</span> <span class="o">|</span> <span class="kc">None</span><span class="p">:</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;predrilled depth wrt offset&quot;&quot;&quot;</span>
+        <span class="k">return</span> <span class="n">depth_to_offset</span><span class="p">(</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">predrilled_depth</span><span class="p">,</span> <span class="n">offset</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">delivered_vertical_position_offset</span>
+        <span class="p">)</span>
+
+    <span class="nd">@property</span>
+    <span class="k">def</span> <span class="nf">final_depth_offset</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">float</span> <span class="o">|</span> <span class="kc">None</span><span class="p">:</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;final depth wrt offset&quot;&quot;&quot;</span>
+        <span class="k">return</span> <span class="n">depth_to_offset</span><span class="p">(</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">final_depth_offset</span><span class="p">,</span> <span class="n">offset</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">delivered_vertical_position_offset</span>
+        <span class="p">)</span>
 
     <span class="k">def</span> <span class="fm">__str__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="sa">f</span><span class="s2">&quot;CPTData: </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">display_attributes</span><span class="p">()</span><span class="si">}</span><span class="s2">&quot;</span>
@@ -204,6 +282,31 @@
 <span class="sd">        Get pretty formatted string representation of `CPTData.attributes``</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="n">pprint</span><span class="o">.</span><span class="n">pformat</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">attributes</span><span class="p">())</span></div></div>
+
+
+<span class="k">def</span> <span class="nf">_calculate_friction_number</span><span class="p">(</span><span class="n">lf</span><span class="p">:</span> <span class="n">pl</span><span class="o">.</span><span class="n">LazyFrame</span><span class="p">,</span> <span class="n">columns</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="n">pl</span><span class="o">.</span><span class="n">LazyFrame</span><span class="p">:</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Post-process function for CPT data, creates a new column with the computed frictionRatio&quot;&quot;&quot;</span>
+    <span class="k">if</span> <span class="s2">&quot;localFriction&quot;</span> <span class="ow">in</span> <span class="n">columns</span> <span class="ow">and</span> <span class="s2">&quot;coneResistance&quot;</span> <span class="ow">in</span> <span class="n">columns</span><span class="p">:</span>
+        <span class="k">return</span> <span class="n">lf</span><span class="o">.</span><span class="n">with_columns</span><span class="p">(</span>
+            <span class="p">(</span>
+                <span class="n">pl</span><span class="o">.</span><span class="n">col</span><span class="p">(</span><span class="s2">&quot;localFriction&quot;</span><span class="p">)</span>
+                <span class="o">/</span> <span class="n">pl</span><span class="o">.</span><span class="n">when</span><span class="p">(</span><span class="n">pl</span><span class="o">.</span><span class="n">col</span><span class="p">(</span><span class="s2">&quot;coneResistance&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mf">0.0</span><span class="p">)</span>
+                <span class="o">.</span><span class="n">then</span><span class="p">(</span><span class="kc">None</span><span class="p">)</span>
+                <span class="o">.</span><span class="n">otherwise</span><span class="p">(</span><span class="n">pl</span><span class="o">.</span><span class="n">col</span><span class="p">(</span><span class="s2">&quot;coneResistance&quot;</span><span class="p">))</span>
+                <span class="o">*</span> <span class="mf">100.0</span>
+            <span class="p">)</span><span class="o">.</span><span class="n">alias</span><span class="p">(</span><span class="s2">&quot;frictionRatioComputed&quot;</span><span class="p">)</span>
+        <span class="p">)</span>
+    <span class="k">return</span> <span class="n">lf</span>
+
+
+<span class="k">def</span> <span class="nf">_calculate_depth_with_respect_to_offset</span><span class="p">(</span>
+    <span class="n">lf</span><span class="p">:</span> <span class="n">pl</span><span class="o">.</span><span class="n">LazyFrame</span><span class="p">,</span> <span class="n">offset</span><span class="p">:</span> <span class="nb">float</span> <span class="o">|</span> <span class="kc">None</span><span class="p">,</span> <span class="n">columns</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span>
+<span class="p">)</span> <span class="o">-&gt;</span> <span class="n">pl</span><span class="o">.</span><span class="n">LazyFrame</span><span class="p">:</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Post-process function for CPT data creates a new column with the elevation with respect to offset&quot;&quot;&quot;</span>
+    <span class="k">if</span> <span class="n">offset</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
+        <span class="k">return</span> <span class="n">lf</span>
+    <span class="n">yname</span> <span class="o">=</span> <span class="s2">&quot;depth&quot;</span> <span class="k">if</span> <span class="s2">&quot;depth&quot;</span> <span class="ow">in</span> <span class="n">columns</span> <span class="k">else</span> <span class="s2">&quot;penetrationLength&quot;</span>
+    <span class="k">return</span> <span class="n">lf</span><span class="o">.</span><span class="n">with_columns</span><span class="p">((</span><span class="n">offset</span> <span class="o">-</span> <span class="n">pl</span><span class="o">.</span><span class="n">col</span><span class="p">(</span><span class="n">yname</span><span class="p">))</span><span class="o">.</span><span class="n">alias</span><span class="p">(</span><span class="s2">&quot;depthOffset&quot;</span><span class="p">))</span>
 </pre></div>
 
            </div>
