--- a/genindex.html
+++ b/genindex.html
@@ -103,6 +103,14 @@
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.alias">alias (pygef.bore.BoreData attribute)</a>
+
+      <ul>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.alias">(pygef.cpt.CPTData attribute)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tree/reference.html#pygef.bore.BoreData.attributes">attributes() (pygef.bore.BoreData method)</a>
 
       <ul>
@@ -133,6 +141,12 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.columns">columns (pygef.bore.BoreData property)</a>
+
+      <ul>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.columns">(pygef.cpt.CPTData property)</a>
+</li>
+      </ul></li>
       <li><a href="tree/reference.html#pygef.cpt.CPTData.cone_diameter">cone_diameter (pygef.cpt.CPTData attribute)</a>
 </li>
       <li><a href="tree/reference.html#pygef.cpt.CPTData.cone_surface_area">cone_surface_area (pygef.cpt.CPTData attribute)</a>
@@ -141,10 +155,10 @@
 </li>
       <li><a href="tree/reference.html#pygef.cpt.CPTData.cone_to_friction_sleeve_distance">cone_to_friction_sleeve_distance (pygef.cpt.CPTData attribute)</a>
 </li>
-      <li><a href="tree/reference.html#pygef.cpt.CPTData.cone_to_friction_sleeve_surface_area">cone_to_friction_sleeve_surface_area (pygef.cpt.CPTData attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.cone_to_friction_sleeve_surface_area">cone_to_friction_sleeve_surface_area (pygef.cpt.CPTData attribute)</a>
+</li>
       <li><a href="tree/reference.html#pygef.cpt.CPTData.cone_to_friction_sleeve_surface_quotient">cone_to_friction_sleeve_surface_quotient (pygef.cpt.CPTData attribute)</a>
 </li>
       <li><a href="tree/reference.html#pygef.cpt.CPTData.cpt_description">cpt_description (pygef.cpt.CPTData attribute)</a>
@@ -209,9 +223,17 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tree/reference.html#pygef.bore.BoreData.final_bore_depth">final_bore_depth (pygef.bore.BoreData attribute)</a>
 </li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.final_depth">final_depth (pygef.cpt.CPTData attribute)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="tree/reference.html#pygef.cpt.CPTData.final_depth">final_depth (pygef.cpt.CPTData attribute)</a>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.final_depth_offset">final_depth_offset (pygef.bore.BoreData property)</a>
+
+      <ul>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.final_depth_offset">(pygef.cpt.CPTData property)</a>
+</li>
+      </ul></li>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.final_sample_depth_offset">final_sample_depth_offset (pygef.bore.BoreData property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -226,6 +248,14 @@
 </li>
       </ul></li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.groundwater_level_offset">groundwater_level_offset (pygef.bore.BoreData property)</a>
+
+      <ul>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.groundwater_level_offset">(pygef.cpt.CPTData property)</a>
+</li>
+      </ul></li>
+  </ul></td>
 </tr></table>
 
 <h2 id="P">P</h2>
@@ -233,11 +263,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tree/reference.html#pygef.plotting.plot_bore">plot_bore() (in module pygef.plotting)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tree/reference.html#pygef.plotting.plot_cpt">plot_cpt() (in module pygef.plotting)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tree/reference.html#pygef.cpt.CPTData.predrilled_depth">predrilled_depth (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.predrilled_depth_offset">predrilled_depth_offset (pygef.cpt.CPTData property)</a>
 </li>
   </ul></td>
 </tr></table>
